--- a/Client/package.json
+++ b/Client/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bootstrap": "^3.3.7",
     "react": "^15.4.2",
     "react-dom": "^15.3.0",
     "react-router": "^3.0.2",
