--- a/Client/package.json
+++ b/Client/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "bootstrap": "^3.3.7",
     "react": "^15.4.2",
+    "react-addons-css-transition-group": "^15.4.2",
     "react-dom": "^15.3.0",
     "react-router": "^3.0.2",
     "webpack": "^1.13.2",
